--- a/Seminar/admin/admin.Master
+++ b/Seminar/admin/admin.Master
@@ -178,6 +178,12 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
   <!--Custom scripts-->
+     <script type="text/javascript">
+         // MDB Lightbox Init
+         $(function () {
+             $("#mdb-lightbox-ui").load("mdb-addons/mdb-lightbox-ui.html");
+         });
+    </script>
   <script>
     // SideNav Initialization
     $(".button-collapse").sideNav();
